Explicitly allow a security manager for Java 19+ compat